--- a/homelab-docker/main.yml
+++ b/homelab-docker/main.yml
@@ -1,7 +1,16 @@
 ---
   - hosts: localhost
     become: yes
+    gather_facts: true
     tasks:
-      
+      - name: debug system
+        debug: 
+          msg: "{{ ansible_distribution }}" 
       - include_role:
           name: docker
+        when: ansible_distribution == 'Ubuntu'
+      
+      - include_role:
+          name: docker-centos
+        when: ansible_distribution == "CentOS"
+                  
