update docker install on cnetos

--- a/homelab-docker/main.yml
+++ b/homelab-docker/main.yml
@@ -7,7 +7,7 @@
         debug: 
           msg: "{{ ansible_distribution }}" 
       - include_role:
-          name: docker
+          name: docker-debian
         when: ansible_distribution == 'Ubuntu' or ansible_distribution == 'Debian'
       
       - include_role:
