try to use standard config

--- a/homelab-media-server/main.yml
+++ b/homelab-media-server/main.yml
@@ -9,15 +9,15 @@
     tasks:
       # - include_role:
       #     name: plex-media-server
-      - include_role:
-          name: emby-media-server 
+    #   - include_role:
+    #       name: emby-media-server 
       - include_role:
           name: jackett  
-      - include_role:
-          name: radarr 
-      - include_role:
-          name: portainer
-      - include_role:
-          name: qbittorrent
-      - include_role:
-          name: sonarr
+    #   - include_role:
+    #       name: radarr 
+    #   - include_role:
+    #       name: portainer
+    #   - include_role:
+    #       name: qbittorrent
+    #   - include_role:
+    #       name: sonarr
