--- a/homelab-docker/roles/docker-debian/tasks/main.yml
+++ b/homelab-docker/roles/docker-debian/tasks/main.yml
@@ -26,4 +26,5 @@
   pip:
     name: docker
 
-
+- name: install docker-compose
+  shell: curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
