--- a/homelab-docker/roles/docker-debian/tasks/main.yml
+++ b/homelab-docker/roles/docker-debian/tasks/main.yml
@@ -28,3 +28,8 @@
 
 - name: install docker-compose
   shell: curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+
+- name: make docker-compose executable
+  file:
+    path: /usr/local/bin/docker-compose
+    mode: "0755"
