--- a/homelab-elk/main.yml
+++ b/homelab-elk/main.yml
@@ -1,6 +1,8 @@
 ---
 - hosts: localhost
   become: yes
+  vars:
+    elk_version: "7.10.1"
   tasks:
     - include_role:
         name: elasticsearch
