--- a/homelab-elk/roles/elk/tasks/main.yml
+++ b/homelab-elk/roles/elk/tasks/main.yml
@@ -30,6 +30,9 @@
       - "5000:5000/tcp"
       - "5000:5000/udp"
       - "9600:9600"
+    mounts:
+      source: logstash.conf
+      target: /usr/share/logstash/config/logstash.yml
     env:
       ES_JAVA_OPTS: "-Xmx256m -Xms256m"
     networks:
