--- a/homelab-elk/roles/elk/tasks/main.yml
+++ b/homelab-elk/roles/elk/tasks/main.yml
@@ -31,7 +31,7 @@
       - "5000:5000/udp"
       - "9600:9600"
     volumes:
-      - "logstash/pipeline:/usr/share/logstash/pipeline"
+      - "{{ role_path }}/files/logstash/pipeline:/usr/share/logstash/pipeline"
     env:
       ES_JAVA_OPTS: "-Xmx256m -Xms256m"
     networks:
