--- a/homelab-haproxy/main.yml
+++ b/homelab-haproxy/main.yml
@@ -3,4 +3,7 @@
   become: yes
   tasks:
     - include_role:
-        name: haproxy
+        name: template
+
+    # - include_role:
+    #     name: haproxy
