--- a/homelab-haproxy/main.yml
+++ b/homelab-haproxy/main.yml
@@ -5,5 +5,5 @@
     - include_role:
         name: template
 
-    # - include_role:
-    #     name: haproxy
+    - include_role:
+        name: haproxy
