--- a/homelab-docker/roles/docker-centos/tasks/main.yml
+++ b/homelab-docker/roles/docker-centos/tasks/main.yml
@@ -18,3 +18,16 @@
 - name: install python docker module with pip
   pip:
     name: docker
+
+- name: install docker-compose
+  shell: curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+
+- name: make docker-compose executable
+  file:
+    path: /usr/local/bin/docker-compose
+    mode: "0755"
+
+- name: enable service docker
+  systemd:
+    name: docker
+    enabled: yes
