--- a/homelab-docker/roles/docker-debian/tasks/main.yml
+++ b/homelab-docker/roles/docker-debian/tasks/main.yml
@@ -33,3 +33,8 @@
   file:
     path: /usr/local/bin/docker-compose
     mode: "0755"
+
+- name: enable service docker
+  systemd:
+    name: docker
+    enabled: yes
